--- a/app/globals.css
+++ b/app/globals.css
@@ -2,3 +2,8 @@
 @tailwind components;
 @tailwind utilities;
 
+:root {
+    --primary-color: #E3E2E2;
+    --secondary-color: #101628;
+    --tertiary-color: #FE5541;
+  }
